--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://harshkumarshrivas128:yourpassword@cluster0.jzraa.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=8uruy935uyo5ujjk
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chai-aur-backend
+REFRESH_TOKEN_EXPIRY=10d
